--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script defer src="main.dart.js" type="application/javascript"></script>
+	<link rel="icon" href="/assets/appicon.png">
 </head>
 <body>
 </body>
